plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '7.0.2'
    id 'nebula.dependency-lock' version '12.7.1'
    id "org.sonarqube" version "6.0.1.5171"
    id "jacoco"
}

group = 'com.jaapec'
version = '0.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

ext {
    set('netflixDgsVersion', "10.0.3")
}


dependencies {
    implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
    implementation 'org.apache.logging.log4j:log4j-api:2.24.3'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.netflix.graphql.dgs:graphql-dgs-spring-graphql-starter'
    implementation 'com.google.guava:guava:32.1.1-jre'
    implementation 'org.reflections:reflections:0.10.2'
    implementation 'jakarta.json:jakarta.json-api:2.1.3'
    implementation 'org.hibernate.orm:hibernate-core:6.6.7.Final'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.2'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'io.github.cdimascio:dotenv-java:3.1.0'
    implementation 'org.springframework:spring-orm:6.2.3'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'dnsjava:dnsjava:3.6.3'

    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.5.2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.netflix.graphql.dgs:graphql-dgs-spring-graphql-starter-test'
    testImplementation 'org.mockito:mockito-core:5.15.2'
    testImplementation 'net.datafaker:datafaker:2.2.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom "com.netflix.graphql.dgs:graphql-dgs-platform-dependencies:${netflixDgsVersion}"
    }
}

sourceSets {
    main {
        java { srcDirs = ['src/main'] }
        resources { srcDirs = ['src/main/resources'] }
    }

    test {
        java { srcDirs = ['src/test'] }
        resources { srcDirs = ['src/test/resources'] }
    }
}


tasks.named('test') {
    useJUnitPlatform()
    doFirst {
        jvmArgs += "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}"
    }
    jvmArgs += ["-Xshare:off"]

}

spotless {
    java {
        prettier(['prettier': '2.8.8', 'prettier-plugin-java': '2.2.0'])
                .config(['parser': 'java', 'useTabs': true, 'printWidth': 120])
        importOrder('\\#', 'java', '', 'com.jaapec', '')
        removeUnusedImports()
        endWithNewline()
        formatAnnotations()
    }
}

sonar {
    properties {
        property "sonar.projectKey", "jaapec_tenant-service_f0deb4f3-b7dc-4353-8efe-323afa2b46c1"
        property "sonar.projectName", "Tenant Service"
        property "sonar.qualitygate.wait", true

        property "sonar.coverage.exclusions", """
            **/*DomainEvent.java
        """.stripIndent()
    }
}


tasks.named('bootJar') {
    from('src/main'){
        into('')
    }
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true

    }
}
